# pandoc-run-python

./: .gitignore  LICENSE  README.md  pyproject.toml  test.md
.github/workflows/: publish.yml
pandoc-run-python/: pandoc_run_python.py
pandoc_run_python/: filter.py  mpl_backend.py  pandoc_run_python.py  test.py  types.py
tests/: test_basic.py  test_formatter.py  test_matplotlib.py  test_simple.py
tests/sample_files/: 1.md  eval_last.md  github_example.md  matplotlib.md  no_output.md  oneline.md  readme.md  replace_old.md  simple.md  simple_wellea.md
