[tool.poetry]
name = "pandoc-run-python"
version = "0.1.4"
description = "run python code blocks in markdown code"
authors = ["Bart Smeets"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Bart6114/pandoc-run-python"

[tool.poetry.dependencies]
python = "^3.8"
panflute = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
pytest-cov = "^2.11.1"
flake8-annotations = "^2.6.2"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry.scripts]
pandoc-run-python = "pandoc_run_python.filter:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
