[tool.poetry]
name = "pandoc-run-python"
version = "0.0.0"
description = "run python code blocks in markdown code"
authors = ["Bart Smeets"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Bart6114/pandoc-run-python"

[tool.poetry.dependencies]
python = "^3.9"
panflute = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
flake8-annotations = "^2.6.2"
matplotlib = "^3.6.1"
black = "^22.10.0"
ruff = "^0.0.81"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry.scripts]
pandoc-run-python = "pandoc_run_python.filter:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
