[tool.poetry]
authors = ["Bart Smeets"]
description = "run python code blocks in markdown code"
homepage = "https://github.com/Bart6114/pandoc-run-python"
license = "MIT"
name = "pandoc-run-python"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
panflute = "^2.0.5"
python = "^3.9"

## optional deps
black = {version = "^22.10.0", optional = true}

[tool.poetry.extras]
black = ["black"]

[tool.poetry.dev-dependencies]
flake8-annotations = "^2.6.2"
matplotlib = "^3.6.1"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
ruff = "^0.0.81"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"
vcs = "git"

[tool.poetry.scripts]
pandoc-run-python = "pandoc_run_python.filter:main"

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
